# go-strategy-app

./: .dockerignore  .env.example  .gitattributes  .gitignore  ANDROID_CRASH_FIX_COMPLETE.md  ANDROID_LIMITATIONS.md  ANDROID_ONNX_SUCCESS.md  APPROACHES_TRIED.md  CLAUDE.md  CRASH_ROOT_CAUSE.md  FINAL_STATUS.md  FINAL_SUCCESS_REPORT.md  GENERATION_LOG.md  HANDOVER.md  HANDOVER_INSTRUCTIONS.md  HYBRID_MCTS_ONNX_COMPLETE.md  HYBRID_MCTS_ONNX_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_LOG.md  KATAGO_COMPARISON.md  NEXT_STEPS.md  PHASE_1_2_COMPLETE.md  PROJECT_SUMMARY.md  README.md  SOLUTION_HYBRID_MCTS_ONNX.md  STATUS_REPORT.md  SUCCESS_ON_SNAPDRAGON8GEN3.md  TASKS.md  TESTING_GUIDE.md  check_gpu_util.exp  check_gpu_util_detailed.exp  check_nproc.exp  check_parallel_progress.exp  check_running.exp  config.yaml  config.yaml.backup  debug_katago.py  deploy.sh  docker-compose.yml  err.txt  (+12 more)
.agent/workflows/: update-status.md
.github/workflows/: deploy-web.yml  release.yml
data/: .gitkeep  analysis.db.bak  current_session.json
docker/: README.md
docker/api/: Dockerfile
docker/katago/: Dockerfile
docker/web/: Dockerfile
docs/: KATAGO_MOBILE_INTEGRATION_PLAN.md  QUICK_REFERENCE.md  QUICK_RELEASE.md  SCREENSHOT_GUIDE.md  UI_SPEC.md  USER_GUIDE.md  USER_MANUAL_完整版.md
docs/images/: README.md
docs/spec/: API.md  ARCHITECTURE.md  BRANCHING.md  DATA.md  DATABASE.md  ERROR_HANDLING.md  LOGIC.md  PERFORMANCE.md  PLATFORM_MATRIX.md  README.md  SECURITY.md  TEST.md  openapi.yaml
katago/: README.txt  analysis.cfg  analysis_gpu.cfg  fast_cpu.cfg  gtp_analysis.cfg  gtp_gpu.cfg  gtp_gpu_lowmem.cfg
mobile/: ANDROID_ONNX_TEST.md  BUILD_OUTPUTS.md  CLOUD_SETUP.md  FINAL_DELIVERY.md  ONNX_FEATURE_TODO.md  README.md  WINDOWS_BUILD.md  build_all.sh  build_apk.sh  build_log.txt  build_windows_full.ps1  ios_build_log.txt  ios_test_logs.txt  ios_test_logs_2.txt  pubspec.yaml  release_android.sh  release_ios.sh  release_macos.sh  release_windows.ps1  sync_windows.ps1  version.sh
mobile/android/app/: build.gradle  proguard-rules.pro
mobile/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mobile/android/app/src/main/cpp/fake_zip/: zip.h
mobile/android/app/src/main/cpp/katago/cpp/command/: analysis.cpp
mobile/android/app/src/main/cpp/katago/cpp/neuralnet/: onnxbackend.cpp
mobile/assets/: opening_book.json
mobile/assets/katago/: README.md  TFLITE_CONVERSION.md  analysis.cfg  model.onnx  model.tflite  model_13x13.onnx  model_19x19.onnx  model_9x9.onnx
mobile/ios/: .gitignore  Podfile  build_log.txt
mobile/ios/KataGoMobile/: KataGoMobile.podspec
mobile/ios/Runner/: AppDelegate.swift  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: config.dart  main.dart  test_onnx_standalone.dart
mobile/lib/models/: analysis_result.dart  board_state.dart  game_record.dart  models.dart
mobile/lib/providers/: game_provider.dart  providers.dart
mobile/lib/screens/: analysis_screen.dart  auth_screen.dart  screens.dart  settings_screen.dart
mobile/lib/services/: api_service.dart  auth_service.dart  cache_service.dart  cache_service_ffi.dart  cache_service_ffi_stub.dart  cloud_storage_service.dart  (+5 more)
mobile/test/: board_state_test.dart  game_provider_test.dart  opening_book_service_test.dart  widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
scripts/: auto_run_books.sh  auto_run_d13.sh  build_katago_android.sh  deploy.sh  mirror_ios_sources.py  run_data_generation.sh  setup_android_test.sh  setup_katago.sh  test_analyze.py  test_android_hybrid_mcts.sh  validate_openapi.py  windows_setup.ps1
scripts/remote/: check_db_remote.exp  check_final_status.exp  check_gtp_live.exp  check_mem.exp  download_db.exp  final_attempt_export.exp  get_summary_text.exp  inspect_gtp.exp  rerun_export.exp
scripts/remote_runner/: constrained_selfplay.py  run_remote.sh  start_book_builder.sh
src/: __init__.py  analyzer.py  api.py  board.py  cache.py  cli.py  config.py  database.py  gui.py  katago_gtp.py  sgf_handler.py
src/assets/: seed_data.sql
src/scripts/: build_opening_book.py  build_opening_book_parallel.py  export_db.py  export_opening_book.py  import_katago_book.py  verify_database.py
tests/: __init__.py  test_api.py  test_board.py  test_cache.py  test_sgf_handler.py
(+2437 files in other folders)
